src/objects/EngagementTrackerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>The number of records processed per batch. Defaults to 50. The default should only be lowered if custom code is causing malfunctioning in the batch processing.</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gratitude_Machine_Days_To_Exclude__c</fullName>
        <defaultValue>365</defaultValue>
        <inlineHelpText>Exclude contacts in the Gratitude Machine that have already been on a Gratitude Machine campaign within this number of days.</inlineHelpText>
        <label>Gratitude Machine Days To Exclude</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gratitude_Machine_Minimum_Days_in_Level__c</fullName>
        <defaultValue>90</defaultValue>
        <inlineHelpText>When finding &quot;Old Steadies&quot;, only include contacts who have been in their level at least this number of days.</inlineHelpText>
        <label>Gratitude Machine Minimum Days in Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gratitude_Machine_Minumum_Level__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>The minum Engagement Level of contacts to include in the Gratitude Machine.</inlineHelpText>
        <label>Gratitude Machine Minimum Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gratitude_Machine_Recent_Activity_Days__c</fullName>
        <defaultValue>365</defaultValue>
        <inlineHelpText>For &quot;Old Steadies&quot; the number of days they must have done some engagement related action in.</inlineHelpText>
        <label>Gratitude Machine Recent Activity Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Householded_Donor_Levels__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, assigns engagement levels to everyone in the household based on the total donations from the household.</inlineHelpText>
        <label>Householded Donor Levels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies whether the Contact&apos;s membership should count toward engagement level. Current members are given an engagement level based on New Member Level and Renewing Member Level settings below.</inlineHelpText>
        <label>Include Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Opps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, will consider Donation history as part of engagement rating.</inlineHelpText>
        <label>Include Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Name__c</fullName>
        <defaultValue>&quot;1 - Following&quot;</defaultValue>
        <label>Level 1 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Name__c</fullName>
        <defaultValue>&quot;2 - Endorsing&quot;</defaultValue>
        <label>Level 2 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Name__c</fullName>
        <defaultValue>&quot;3 - Contributing&quot;</defaultValue>
        <label>Level 3 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levels_Don_t_Require_Responded__c</fullName>
        <description>If any apply, enter as numbers separated by semi-colons,  (Most of the time, campaign mbrship will only count toward level if the mbrship is flagged as Responded.  However, for some (receiving newsletter) etc we want it to count even if not responded.)</description>
        <inlineHelpText>Campaigns with these levels are considered Passive.  This means that contacts in these campaigns don&apos;t require a Responded-type status in order to receive the level.  See Installation Guide for more info.</inlineHelpText>
        <label>Passive Campaign Levels</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Member_Level__c</fullName>
        <inlineHelpText>Level to assign to active members with a Last Membership Origin of New.</inlineHelpText>
        <label>New Member Engagement Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Rectype_For_Tests_Default__c</fullName>
        <defaultValue>&quot;Donation&quot;</defaultValue>
        <inlineHelpText>The default Opportunity Record Type for donations to be used in unit tests.</inlineHelpText>
        <label>Opp Rectype For Tests Default</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectype_For_Tests_Member__c</fullName>
        <defaultValue>&quot;Membership&quot;</defaultValue>
        <inlineHelpText>Opportunity Record Type for membership to be used in unit tests.</inlineHelpText>
        <label>Opp Rectype For Tests Member</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Default_Duration__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>Default duration in Months that the Engagement level is overridden when the Contact&apos;s Engagement Level Override field is set.</inlineHelpText>
        <label>Contact Override Default Time (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewing_Member_Level__c</fullName>
        <inlineHelpText>Level to assign to active members with Last Membership Origin of Renewal.</inlineHelpText>
        <label>Renewing Member Engagement Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Error_Emails_To__c</fullName>
        <inlineHelpText>Error notifications will be sent to the email address entered here.  Currently, this is only for notifications about validation problems on contact records.</inlineHelpText>
        <label>Send Error Emails To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>if checked, will only operate on contacts that include the string &apos;testeng&apos; in the Title field.  Otherwise will operate on all contacts</inlineHelpText>
        <label>Testing Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeframe_Medium__c</fullName>
        <defaultValue>18</defaultValue>
        <inlineHelpText>number of months to go back for moderately-recent activity</inlineHelpText>
        <label>DEPRECATED Timeframe Medium</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeframe_Recent__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>The length of time in months that Campaign actions earn an Engagement Level.</inlineHelpText>
        <label>Engagement Timeframe (Months)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Groundwire Engage General Settings</label>
</CustomObject>